--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ DerivedData/
 vendor
 d4l-example-app-config.json
 generated
+xcbuild
+Data4LifeCrypto-xcframework*
+Data4LifeSDK-xcframework*
+XCFrameworks*
+xcframeworks
 
 ## Various settings
 *.pbxuser
