--- a/HCSDK.xcodeproj/xcshareddata/xcschemes/HCSDK.xcscheme
+++ b/HCSDK.xcodeproj/xcshareddata/xcschemes/HCSDK.xcscheme
@@ -1,10 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
    LastUpgradeVersion = "1220"
-   version = "1.3">
+   version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <PreActions>
+         <ExecutionAction
+            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
+            <ActionContent
+               title = "Run Script"
+               scriptText = "# Type a script or drag a script file from your workspace to insert its path.&#10;for file in $(find ${BUILD_DIR}/../../SourcePackages/artifacts | grep .bcsymbolmap); &#10;do&#10;    echo &quot;removing $file&quot;&#10;    rm $file&#10;done&#10;">
+               <EnvironmentBuildable>
+                  <BuildableReference
+                     BuildableIdentifier = "primary"
+                     BlueprintIdentifier = "837463A51E854E7500AB500F"
+                     BuildableName = "Data4LifeSDK.framework"
+                     BlueprintName = "Data4LifeSDK"
+                     ReferencedContainer = "container:HCSDK.xcodeproj">
+                  </BuildableReference>
+               </EnvironmentBuildable>
+            </ActionContent>
+         </ExecutionAction>
+      </PreActions>
       <BuildActionEntries>
          <BuildActionEntry
             buildForTesting = "YES"
