--- a/.swiftpm/xcode/xcshareddata/xcschemes/Data4LifeSDK-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/Data4LifeSDK-Package.xcscheme
@@ -132,6 +132,20 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Data4LifeSDKPackage"
+               BuildableName = "Data4LifeSDKPackage"
+               BlueprintName = "Data4LifeSDKPackage"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
