--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -3,7 +3,7 @@ name: D4L SDK CI (PR Testing)
 on:
   push:
     branches:
-      - main 
+      - main
 
   pull_request:
     branches:
@@ -15,6 +15,7 @@ jobs:
 
     env:
       D4L_EXAMPLE_CONFIG: ${{ secrets.D4L_EXAMPLE_CONFIG }}
+      DEVELOPER_DIR: /Applications/Xcode_12.5.app/Contents/Developer
 
     steps:
     - name: Display runner context
