--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -5,8 +5,6 @@ on:
     branches:
       - main
 
-  pull_request:
-
 jobs:
   build:
     runs-on: macos-latest
@@ -14,7 +12,7 @@ jobs:
     env:
       D4L_EXAMPLE_CONFIG: ${{ secrets.D4L_EXAMPLE_CONFIG }}
     concurrency:
-      group: ${{ github.head_ref }}
+      group: ${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Display runner context
