--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -5,10 +5,6 @@ on:
     branches:
       - release/**
 
-  pull_request:
-    branches:
-      - main
-
 jobs:
   release-check:
     runs-on: macos-latest
@@ -16,7 +12,7 @@ jobs:
     env:
       D4L_EXAMPLE_CONFIG: ${{ secrets.D4L_EXAMPLE_CONFIG }}
     concurrency:
-      group: ${{ github.head_ref }}
+      group: ${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Display runner context
