Updates group names

--- a/.github/workflows/pr-test.yml
+++ b/.github/workflows/pr-test.yml
@@ -5,6 +5,8 @@ on:
     branches:
       - main
 
+  pull_request:
+
 jobs:
   build:
     runs-on: macos-latest
@@ -12,7 +14,7 @@ jobs:
     env:
       D4L_EXAMPLE_CONFIG: ${{ secrets.D4L_EXAMPLE_CONFIG }}
     concurrency:
-      group: ${{ github.ref }}
+      group: build-${{ github.head_ref }}
       cancel-in-progress: true
     steps:
     - name: Display runner context
