--- a/.github/workflows/release-test.yml
+++ b/.github/workflows/release-test.yml
@@ -12,7 +12,7 @@ jobs:
     env:
       D4L_EXAMPLE_CONFIG: ${{ secrets.D4L_EXAMPLE_CONFIG }}
     concurrency:
-      group: ${{ github.ref }}
+      group: release-${{ github.ref }}
       cancel-in-progress: true
     steps:
     - name: Display runner context
