--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,7 +8,7 @@ sonar.scm.provider=git
 sonar.swift.coverage.reportPaths=sonarqube-swift-coverage
 sonar.sourceEncoding=UTF-8
 
-sonar.cpd.exclusions=SDK/Tests/**/*,Crypto/Tests/**/*
+sonar.cpd.exclusions=SDK/Tests/**/*
 sonar.exclusions=**/*.cs,**/*.c,**/*.h,**/*.cc,**/*.cpp,**/*.cxx,**/*.c++,**/*.hh,**/*.hpp,**/*.hxx,**/*.h++,**/*.ipp,**/*.m,**/*.java,**/*.jav,**/*sql,**/*tab,**/*pkb,**/*.vb,fastlane/**/*,docs/**/*
 sonar.test.exclusions=**/*.cs,**/*.c,**/*.h,**/*.cc,**/*.cpp,**/*.cxx,**/*.c++,**/*.hh,**/*.hpp,**/*.hxx,**/*.h++,**/*.ipp,**/*.m,**/*.java,**/*.jav,**/*sql,**/*tab,**/*pkb,**/*.vb,fastlane/**/*,docs/**/*
 sonar.c.file.suffixes=-
